--- a/assets/css/mygitstats.css
+++ b/assets/css/mygitstats.css
@@ -1,9 +1,10 @@
 /**
  * GitStats - default style
+background-color: #88BC1A;
  */
 body {
 	color: black;
-	background-color: #fff;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 }
 
 dt {
@@ -27,40 +28,49 @@ table {
 }
 
 /* Navigation bar; tabbed style */
-.nav {
-	border-bottom: 1px solid black;
+.main-nav {
+	margin:20px;
+}
+
+.main-nav li a {
 	padding: 0.3em;
-}
-
-.nav ul {
-	list-style-type: none;
-	display: inline;
-	margin: 0;
-	padding: 0;
-}
-
-.nav li {
-	display: inline;
-}
-
-.nav li a {
-	padding: 0.3em;
-	text-decoration: none;
-	color: black;
-	border: 1px solid black;
 	margin: 0.5em;
-	background-color: #ddf;
+	font-size:20px;
 }
 
-.nav li a:hover {
+.main-nav li a:hover {
 	background-color: #ddd;
 	border-bottom: 1px solid #ddf;
 }
 
-.moreauthors {
-	font-size: 80%;
-}
 h2 {
 	margin:60px 0px 20px 0px;
 	clear:both;
+}
+.plot {
+	margin: 60px auto;
+	height: 450px;
+}
+.plot table.jqplot-table-legend {
+	width:auto;
+}
+
+.heat-table tr {
+	height:12.5%;
+}
+.heat-table tr th, .heat-table tr td {
+	width:4%;
+	vertical-align:middle;
+	text-align:center;
+	border-right:1px solid #ddd;
+}
+
+.heat-table tr td.data {
+	color:#ddd;
+}
+h2.heat-table-heading {
+	text-align:center;
+	color:#666;
+	font-size:1.6em;
+	font-weight:normal;
 }
