Added back DOM table
added back DOM table for Tags
added Pie chart , donut capabilities

--- a/assets/css/mygitstats.css
+++ b/assets/css/mygitstats.css
@@ -56,10 +56,10 @@ h2 {
 }
 
 .heat-table tr {
-	height:12.5%;
+	height:auto;
 }
 .heat-table tr th, .heat-table tr td {
-	width:4%;
+	width:auto;
 	vertical-align:middle;
 	text-align:center;
 	border-right:1px solid #ddd;
