Added ipad image to home page
added ipad to home page

--- a/assets/css/mygitstats.css
+++ b/assets/css/mygitstats.css
@@ -7,17 +7,21 @@ body {
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 }
 
-dt {
+.ipad-bg dl {
+	margin:60px auto;
+	width:45%;
+}
+.ipad-bg dt {
 	font-weight: bold;
 	float: left;
 	margin-right: 1em;
 }
 
-dt:after {
+.ipad-bg dt:after {
 	content: ': ';
 }
 
-dd {
+.ipad-bg dd {
 	display: block;
 	clear: left;
 }
@@ -73,4 +77,10 @@ h2.heat-table-heading {
 	color:#666;
 	font-size:1.6em;
 	font-weight:normal;
+}
+.ipad-bg {
+	background-image:url('../images/ipad3.png');
+   	background-repeat:no-repeat;
+	background-position:center;
+	height:600px;
 }
