--- a/assets/css/mygitstats.css
+++ b/assets/css/mygitstats.css
@@ -42,9 +42,8 @@ table {
 	font-size:20px;
 }
 
-.main-nav li a:hover {
-	background-color: #ddd;
-	border-bottom: 1px solid #ddf;
+.main-nav li.background-sunFlower a {
+	color:#000;
 }
 
 h2 {
@@ -79,8 +78,95 @@ h2.heat-table-heading {
 	font-weight:normal;
 }
 .ipad-bg {
+	background-image:url('../images/ipad-white.png');
+	background-image:url('../images/ipad-blue.png');
 	background-image:url('../images/ipad3.png');
    	background-repeat:no-repeat;
 	background-position:center;
 	height:600px;
+}
+.ipad-bg {
+	color: #fff;
+	font-family: 'Josefin Sans', sans-serif;
+}
+.ipad-bg h2.heading {
+	margin:45px 0px 0px 0px;
+	position:relative;
+	top:0px;
+	font-size:50px;
+}
+.ipad-bg .home-stats span{
+	font-size:18px;
+	font-family: 'Rosario', sans-serif;
+}
+.ipad-bg .home-stats h2 {
+	margin:50px;
+	font-size:50px;
+}
+.ipad-bg .home-stats h5 {
+	margin:5px 0px 5px 0px;
+}
+.ipad-bg .home-stats h2.string {
+	margin:170px 0px 20px 0px;
+}
+
+.ipad-bg .home-stats h2.count {
+	font-size:70px;
+}
+.control {
+	width: 40px;
+	height: 40px;
+	margin-top: -20px;
+	font-size: 80px;
+	font-weight: 100;
+	line-height: 30px;
+	color: #FFF;
+	text-align: center;
+}
+.control:hover {
+	color:red;
+	text-decoration:none;
+}
+.dom-table {
+	display:none;
+}
+
+.world-map {
+	width:100%;
+	height:500px;
+	background-image:url('../images/world-map1.jpg');
+	background-image:url('../images/world-map2.jpg');
+	background-image:url('../images/world-map.jpg');
+	background-size:100% 100%;
+	background-repeat:no-repeat;
+}
+
+.timezone {
+	width:4.16%;
+	height:100%;
+	float:left;
+	opacity:0.5;
+	outline: 1px dashed #666;
+	filter: alpha(opacity=50);
+}
+
+.timezone-table tr td, .timezone-table tr th {
+	text-align:center;
+	width:4.16%;
+}
+.timezone-table tr td {
+	font-size:11px;
+}
+
+
+.clock {
+	background-image:url('../images/clock-600.png');
+	background-image:url('../images/clockface1.png');
+   	background-repeat:no-repeat;
+	background-position:center;
+	height:600px;
+	margin-bottom:50px;
+}
+
+.month {
 }
