added author of month changes
added author of month modal

--- a/assets/css/mygitstats.css
+++ b/assets/css/mygitstats.css
@@ -73,6 +73,9 @@ h2 {
 .heat-table thead tr {
 	height:10px;
 }
+.heat-table tbody tr {
+	max-height:100px;
+}
 
 .heat-table tr td.data {
 	color:#ddd;
