commiting consolidated changes
added repo list

--- a/assets/css/mygitstats.css
+++ b/assets/css/mygitstats.css
@@ -31,21 +31,6 @@ table {
 	clear:both;
 }
 
-/* Navigation bar; tabbed style */
-.main-nav {
-	margin:20px;
-}
-
-.main-nav li a {
-	padding: 0.3em;
-	margin: 0.5em;
-	font-size:20px;
-}
-
-.main-nav li.background-sunFlower a {
-	color:#000;
-}
-
 h2 {
 	margin:60px 0px 20px 0px;
 	clear:both;
@@ -184,5 +169,61 @@ h3.heat-table-heading {
 	margin-bottom:50px;
 }
 
-.month {
+.brand-bar {
+	margin:0px auto 50px auto;
+	height:75px;
+	clear:both;
+	z-index:100;
+}
+.brand-bar img{
+	height:100%;
+}
+.brand-bar .brand-heading{
+	line-height: 75px;
+	font-size:30px;
+	font-family: 'Rosario', sans-serif;
+	margin:0px auto;
+	color:#eee;
+}
+
+/* Navigation bar; tabbed style */
+.main-nav {
+	margin:0px;
+}
+.main-nav li {
+}
+
+.main-nav li a {
+	margin: 0.5em;
+	font-size:15px;
+	line-height:75px;
+	color:#eee;
+}
+
+.main-nav li.background-sunFlower a {
+	color:#000;
+}
+
+.repo-list {
+	margin:20px;
+}
+
+.repo-list .repo-item {
+	height:75px;
+	line-height:75px;
+	margin:50px auto;
+}
+.repo-list .repo-item .repo-item-wrap{
+	height:100%;
+}
+.repo-list .repo-item img {
+	height:75px;
+}
+.repo-list .repo-item a h3 {
+	line-height: 40px;
+	margin:0px 5px 0px 5px;
+}
+.repo-list .repo-item span {
+	line-height: 20px;
+	margin:0px 5px 0px 5px;
 }
